--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ venv.bak/
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
