--- a/frontend/playlist-frontend/angular.json
+++ b/frontend/playlist-frontend/angular.json
@@ -30,8 +30,7 @@
             "styles": [
               "src/main.scss"
             ],
-            "scripts": [],
-            "es5BrowserSupport": true
+            "scripts": []
           },
           "configurations": {
             "production": {
