--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ before_deploy:
 - openssl aes-256-cbc -K $encrypted_eb6eb26fba1d_key -iv $encrypted_eb6eb26fba1d_iv
   -in travis_deploy_rsa.enc -out travis_deploy_rsa -d
 - eval "$(ssh-agent -s)"
-- chmod 600 /tmp/travis_deploy_rsa
-- ssh-add /tmp/travis_deploy_rsa
+- chmod 600 travis_deploy_rsa
+- ssh-add travis_deploy_rsa
 - echo -e "Host ${DEPLOY_HOST}\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
