--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
     - node -e "console.log('Hi from NodeJS!')"
     before_deploy:
     - openssl aes-256-cbc -K $encrypted_eb6eb26fba1d_key -iv $encrypted_eb6eb26fba1d_iv
-      -in travis_deploy_rsa.enc -out travis_deploy_rsa -d
+      -in ${TRAVIS_BUILD_DIR}/travis_deploy_rsa.enc -out travis_deploy_rsa -d
     - eval "$(ssh-agent -s)"
     - chmod 600 travis_deploy_rsa
     - ssh-add travis_deploy_rsa
@@ -44,7 +44,7 @@ jobs:
     - python manage.py test
     before_deploy:
     - openssl aes-256-cbc -K $encrypted_eb6eb26fba1d_key -iv $encrypted_eb6eb26fba1d_iv
-      -in travis_deploy_rsa.enc -out travis_deploy_rsa -d
+      -in ${TRAVIS_BUILD_DIR}/travis_deploy_rsa.enc -out travis_deploy_rsa -d
     - eval "$(ssh-agent -s)"
     - chmod 600 travis_deploy_rsa
     - ssh-add travis_deploy_rsa
