--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ jobs:
     - ssh-add travis_deploy_rsa
     - echo -e "Host ${DEPLOY_HOST}\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
     deploy:
+      skip_cleanup: true
       provider: script
       script: bash deploy.sh
       on:
