--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 Django==3.0.8
 django-filter==2.3.0
 djangorestframework==3.11.0
+django-cors-headers==3.4.0
 psycopg2==2.8.5
 requests==2.24.0
 gunicorn==20.0.4
